2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* src/totem-uri.c (totem_setup_file_filters): Add subviewer
	files as possible subtitles

2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (video_widget_create), (main): Fix another
	gst_value_set_fraction: assertion `denominator != 0' failed
	error, as the vis is setup before the video window exists

2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_new):
	Use the fastest speed as the default connection speed,
	so we don't get low quality videos by default,
	for GStreamer this time

2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_set_connection_speed),
	(bacon_video_widget_get_connection_speed):
	Use the fastest speed as the default connection speed,
	so we don't get low quality videos by default

2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemNarrowSpacePlugin.cpp:
	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h:
	Revert the previous commit, it's broken

2008-02-21  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemNarrowSpacePlugin.cpp:
	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h: Implement SetTime
	using NPN_RequestRead() if it's available on the stream
	(which it usually never is...) (Closes: #474841)

2008-02-20  Bastien Nocera  <hadess@hadess.net>

	* src/totem-fullscreen.c: (totem_fullscreen_finalize):
	Avoid warning on exit when we're fullscreen and
	exiting
	* src/totem.c: (totem_action_exit), (main): Fix _set_fullscreen
	being called multiple times on startup, fixes not being able 
	to get out of fullscreen on startup, and the next normal run
	showing up as maximised (Closes: #376149)

2008-02-20  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_can_play):
	Check for flupsdemux version, if it's installed, if it's