@@ -1,3 +1,11 @@
+2008-02-21  Philip Withnall  <pwithnall@svn.gnome.org>
+
+	* src/totem-uri.c: (totem_uri_exists),
+	(totem_uri_get_subtitle_for_uri): Modified patch from
+	Anthony Hocquet <anthony.hocquet@gmail.com> to check for
+	subtitle files to autoload with uppercase extensions.
+	(Closes: #515638)
+
 2008-02-21  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-uri.c (totem_setup_file_filters): Add subviewer
